--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -34,6 +34,6 @@ body {
   overflow-x: hidden;
   height: 100%;
   background-color: #ffffff;
-  font-family: GoogleSans-Regular;
+  font-family: GoogleSans-Regular, sans-serif;
   color: #000000;
 }
