--- a/src/styles/Menu.module.scss
+++ b/src/styles/Menu.module.scss
@@ -31,8 +31,15 @@
   }
   .menu__item {
     border-top: 1px solid rgba(255, 255, 255, 0.2);
-    padding: 20px 25px;
+    padding: 18px 25px;
     font-size: 1.1rem;
+    position: relative;
+    .menu__item__arrow {
+      transition: all 0.4s;
+      transform: rotate(0);
+      position: absolute;
+      right: 25px
+    }
     .menu__sub {
       padding-left: 16px;
       height: 0;
@@ -40,10 +47,10 @@
       transition: 0.3s;
       opacity: 0;
     }
+
     &.active {
       .menu__item__arrow {
-        transition: 0.4s;
-        transform: translateX(-50%);
+        transform: rotate(-180deg);
       }
       .menu__sub {
         height: auto;
@@ -63,7 +70,6 @@
     color: #000000;
     transform: translateX(0);
     .menu__item {
-      position: relative;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -82,6 +88,9 @@
           transform: translate(-50%, 100%);
           left: 50%;
         }
+      }
+      .menu__item__arrow{
+        right: 0;
       }
       .menu__sub {
         position: absolute;
