--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -30,10 +30,252 @@
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
   height: 100%;
   background-color: #ffffff;
   font-family: GoogleSans-Regular, sans-serif;
   color: #000000;
+}
+
+.mainbanner {
+  .swiper-btn-next,
+  .swiper-btn-prev {
+    top: 50%;
+    transform: translateY(-50%);
+    position: absolute;
+    z-index: 2;
+  }
+  .swiper-button-disabled {
+    opacity: 0.2;
+  }
+  .swiper-btn-next {
+    right: 0;
+  }
+  .swiper-btn-prev {
+    left: 0;
+  }
+  .swiper-pagination-bullet.swiper-pagination-bullet-active {
+    background: rgb(239 68 68);
+  }
+  @media screen and (min-width: 768px) {
+    .swiper-pagination-bullet {
+      margin: 0 6px !important;
+      width: 15px !important;
+      height: 15px !important;
+    }
+    .swiper-btn-next {
+      right: -60px;
+    }
+    .swiper-btn-prev {
+      left: -60px;
+    }
+  }
+  .contentbanner {
+    transition: 1s;
+    opacity: 0;
+  }
+  .swiper-slide-active {
+    .contentbanner {
+      opacity: 1;
+    }
+  }
+}
+
+/* bt-moving-left-right */
+@keyframes moving-left-right-one {
+  0% {
+    -webkit-transform: translateX(0) translateY(0);
+    transform: translateX(0) translateY(0);
+  }
+
+  40% {
+    -webkit-transform: translateX(50px) translateY(-200px);
+    transform: translateX(50px) translateY(-200px);
+  }
+
+  75% {
+    -webkit-transform: translateX(800px);
+    transform: translateX(800px);
+  }
+
+  100% {
+    -webkit-transform: translateY(0) translateX(0);
+    transform: translateY(0) translateX(0);
+  }
+}
+
+@keyframes moving-left-right-two {
+  0% {
+    -webkit-transform: translateX(0) translateY(0);
+    transform: translateX(0) translateY(0);
+  }
+
+  40% {
+    -webkit-transform: translateX(-50px) translateY(200px);
+    transform: translateX(-50px) translateY(200px);
+  }
+
+  75% {
+    -webkit-transform: translateX(-500px);
+    transform: translateX(-500px);
+  }
+
+  100% {
+    -webkit-transform: translateY(0) translateX(0);
+    transform: translateY(0) translateX(0);
+  }
+}
+
+@keyframes moving-left-right-three {
+  0% {
+    -webkit-transform: translateX(0) translateY(0);
+    transform: translateX(0) translateY(0);
+  }
+
+  40% {
+    -webkit-transform: translateX(100px) translateY(-200px);
+    transform: translateX(100px) translateY(-200px);
+  }
+
+  75% {
+    -webkit-transform: translateX(-500px);
+    transform: translateX(-500px);
+  }
+
+  100% {
+    -webkit-transform: translateY(0) translateX(0);
+    transform: translateY(0) translateX(0);
+  }
+}
+
+/* bt-moving-top-bottom */
+@keyframes moving-top-bottom-one {
+  0% {
+    -webkit-transform: translateX(0) translateY(0);
+    transform: translateX(0) translateY(0);
+  }
+
+  40% {
+    -webkit-transform: translateY(-600px);
+    transform: translateY(-600px);
+  }
+
+  75% {
+    -webkit-transform: translateX(-100px);
+    transform: translateX(-100px);
+  }
+
+  100% {
+    -webkit-transform: translateY(0) translateX(0);
+    transform: translateY(0) translateX(0);
+  }
+}
+
+.animation-moving-left-right-one {
+  -webkit-animation: moving-left-right-one infinite 60s;
+  animation: moving-left-right-one infinite 60s;
+}
+
+.animation-moving-left-right-two {
+  -webkit-animation: moving-left-right-two infinite 40s;
+  animation: moving-left-right-two infinite 40s;
+}
+
+.animation-moving-left-right-three {
+  -webkit-animation: moving-left-right-three 25s infinite;
+  animation: moving-left-right-three 25s infinite;
+}
+
+.mainbanner {
+  .element-group > .element {
+    z-index: 0;
+    position: absolute;
+  }
+  .element-group > .element.one {
+    top: 100px;
+    right: 0px;
+    width: 300px;
+    height: 300px;
+    border-radius: 100%;
+    background-color: #ffa07a;
+    -webkit-filter: blur(100px);
+  }
+
+  .element-group > .element.two {
+    top: 0;
+    right: 460px;
+    width: 280px;
+    height: 280px;
+    background-color: #e52b50;
+    border-radius: 100%;
+  }
+}
+
+.service1 {
+  position: relative;
+  z-index: 1;
+  &::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: -60px;
+    width: 100%;
+    height: 400px;
+    background-color: rgba(252, 157, 154, 0.3);
+    z-index: 1;
+    @media screen and (min-width: 768px) {
+      width: 50vw;
+      height: 350px;
+      border-top-left-radius: 50px;
+      border-bottom-left-radius: 50px;
+    }
+  }
+  .service1-content {
+    z-index: 2;
+  }
+  .service1-image {
+    z-index: 2;
+  }
+  .element-group > .element {
+    z-index: 0;
+    position: absolute;
+  }
+  .element-group > .element.one {
+    top: 0;
+    left: 255px;
+    width: 280px;
+    height: 280px;
+    background-color: #e52b50;
+    border-radius: 100%;
+    z-index: 0;
+  }
+  .element-group > .element.two {
+    top: 0;
+    left: -200px;
+    width: 350px;
+    height: 350px;
+    border-radius: 100%;
+    background-color: #ffa07a;
+    -webkit-filter: blur(100px);
+    -moz-filter: blur(100px);
+    -o-filter: blur(100px);
+    -ms-filter: blur(100px);
+    z-index: 0;
+  }
+}
+
+.service2 {
+  .swiper {
+    .swiper-slide-shadow {
+      background: none;
+    }
+    .swiper-slide-active{
+      img{
+        transform: translateY(-15px);
+        @media screen and (min-width: 768px) {
+          transform: translateY(-40px);
+        }
+        
+      }
+    }
+  }
 }
