--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -34,7 +34,6 @@ body {
   background-color: #ffffff;
   font-family: GoogleSans-Regular, sans-serif;
   color: #000000;
-  width: 100vw;
 }
 
 .mainbanner {
@@ -57,12 +56,12 @@ body {
   .swiper-pagination-bullet.swiper-pagination-bullet-active {
     background: rgb(239 68 68);
   }
+  .swiper-pagination-bullet {
+    margin: 0 6px !important;
+    width: 15px !important;
+    height: 15px !important;
+  }
   @media screen and (min-width: 768px) {
-    .swiper-pagination-bullet {
-      margin: 0 6px !important;
-      width: 15px !important;
-      height: 15px !important;
-    }
     .swiper-btn-next {
       right: -60px;
     }
@@ -193,14 +192,15 @@ body {
     content: "";
     position: absolute;
     right: 0;
-    top: -60px;
+    top: -30px;
     width: 100%;
-    height: 400px;
+    height: 350px;
     background-color: rgba(56, 249, 215, 0.3);
     z-index: 1;
     @media screen and (min-width: 768px) {
-      width: 50vw;
-      height: 350px;
+      top: -60px;
+      width: 55vw;
+      height: 105%;
       border-top-left-radius: 50px;
       border-bottom-left-radius: 50px;
     }
