--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -35,6 +35,9 @@ body {
   font-family: GoogleSans-Regular, sans-serif;
   color: #000000;
 }
+body{
+  margin-top: 112px;
+}
 
 .mainbanner {
   .swiper-btn-next,
