--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -37,9 +37,6 @@ body {
   color: #000000;
   font-size: 16px;
 }
-body {
-  margin-top: 112px;
-}
 
 .mainbanner {
   .swiper-btn-next,
@@ -331,3 +328,34 @@ body {
   }
 }
 
+.project-project {
+  .ant-tabs {
+    font-size: 1rem !important;
+    .ant-tabs-nav {
+      .ant-tabs-tab {
+        margin-left: 15px;
+        .ant-tabs-tab-btn {
+          font-size: 1.2rem !important;
+          color: #000000;
+        }
+      }
+      .ant-tabs-tab-active {
+        .ant-tabs-tab-btn {
+          color: #ffffff;
+        }
+      }
+      &::before {
+        border: 0;
+      }
+    }
+    .ant-tabs-ink-bar {
+      height: 50%;
+      z-index: -1;
+      top: 50%;
+      transform: translateY(-50%);
+      padding: 5px 20px;
+      border-radius: 20px;
+      background-color: rgb(22 78 99);
+    }
+  }
+}
