--- a/src/styles/Menu.module.scss
+++ b/src/styles/Menu.module.scss
@@ -15,6 +15,8 @@
   }
 }
 
+
+
 header.fixed{
   width: 100%;
   position: fixed;
@@ -23,6 +25,7 @@ header.fixed{
   background: #FFFFFF;
   z-index: 20;
 }
+
 
 .menu {
   position: fixed;
@@ -66,6 +69,7 @@ header.fixed{
       transition: 0.3s;
       opacity: 0;
       font-size: 1rem;
+      font-weight: normal;
     }
 
     &.active {
@@ -95,7 +99,6 @@ header.fixed{
       justify-content: space-between;
       align-items: center;
       border-top: none;
-      font-size: 1rem;
       font-weight: normal;
       .menu__item__link {
         position: relative;
