--- a/src/styles/Menu.module.scss
+++ b/src/styles/Menu.module.scss
@@ -17,13 +17,12 @@
 
 
 
-header.fixed{
+.fixed{
   width: 100%;
   position: fixed;
   top: 0;
   left: 0;
   background: #FFFFFF;
-  z-index: 20;
 }
 
 
