--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -355,7 +355,45 @@ body {
       transform: translateY(-50%);
       padding: 5px 20px;
       border-radius: 20px;
-      background-color: rgb(22 78 99);
+      background-color: rgb(19 78 74);
     }
+  }
+}
+
+
+.customer-intro {
+  position: relative;
+  z-index: 1;
+  &::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: -30px;
+    width: 100%;
+    height: 350px;
+    background-color: rgba(56, 249, 215, 0.3);
+    z-index: 1;
+    @media screen and (min-width: 768px) {
+      top: -60px;
+      width: 60vw;
+      height: 105%;
+      border-top-left-radius: 50px;
+      border-bottom-left-radius: 50px;
+    }
+  }
+  .service1-content {
+    z-index: 2;
+  }
+  .service1-image {
+    z-index: 2;
+  }
+  .element.one {
+    top: 0;
+    right: 0;
+    width: 280px;
+    height: 280px;
+    background-color: #38f9d7;
+    border-radius: 100%;
+    z-index: 0;
   }
 }
