--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -355,7 +355,7 @@ body {
       transform: translateY(-50%);
       padding: 5px 20px;
       border-radius: 20px;
-      background-color: rgb(19 78 74);
+      background-color: #193b3f;
     }
   }
 }
