--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -549,7 +549,7 @@ body {
           .menu__sub {
             transform: rotateX(0);
             opacity: 1;
-            // visibility: visible;
+            padding: 10px 0;
           }
           .menu__item__link:after {
             width: 30px;
