--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -37,6 +37,12 @@ body {
   font-size: 16px;
 }
 
+.ant-message-custom-content{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .mainbanner {
   .swiper-btn-next,
   .swiper-btn-prev {
