--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -36,8 +36,12 @@ body {
   color: #333333;
   font-size: 16px;
 }
+a,
+a:hover {
+  color: #333333;
+}
 
-.ant-message-custom-content{
+.ant-message-custom-content {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -338,7 +342,7 @@ body {
     font-size: 1rem !important;
     .ant-tabs-nav {
       .ant-tabs-tab {
-        margin-left:10px;
+        margin-left: 10px;
         .ant-tabs-tab-btn {
           font-size: 1.2rem !important;
           color: #333333;
@@ -450,6 +454,9 @@ body {
     transform: translateX(-100%);
     z-index: 30;
     color: rgba(255, 255, 255, 0.6);
+    a {
+      color: rgba(255, 255, 255, 0.6);
+    }
     &.menu__mobile_show {
       transform: translateX(0);
     }
@@ -510,6 +517,9 @@ body {
       transform: translateX(0);
       z-index: 20;
       color: #333333;
+      a {
+        color: #333333;
+      }
       .menu__item {
         display: flex;
         justify-content: space-between;
@@ -553,6 +563,26 @@ body {
           width: auto;
           background-color: #ffffff;
           border-radius: 10px;
+          .menu__sub__link {
+            position: relative;
+            padding: 5px 20px;
+            &::after {
+              transition: 0.2s;
+              position: absolute;
+              content: "";
+              width: 0;
+              height: 3px;
+              background-color: #e40900;
+              bottom: -3px;
+              transform: translate(-50%, 100%);
+              left: 50%;
+            }
+            &:hover {
+              &:after {
+                width: 30px;
+              }
+            }
+          }
         }
         &:hover {
           .menu__sub {
@@ -611,63 +641,6 @@ body {
 
     @media screen and (min-width: 1024px) {
       display: none;
-    }
-  }
-}
-.footer {
-  .menu {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    font-size: 1.1rem;
-    .menu__item {
-      padding: 5px 16px;
-      cursor: pointer;
-      position: relative;
-      .menu__item__link {
-        position: relative;
-        padding: 5px 20px;
-        &::after {
-          transition: 0.2s;
-          position: absolute;
-          content: "";
-          width: 0;
-          height: 3px;
-          background-color: #e40900;
-          bottom: -3px;
-          transform: translate(-50%, 100%);
-          left: 50%;
-        }
-        .menu__item__arrow {
-          transform: rotate(-180deg);
-          position: absolute;
-          top: 9px;
-          right: -5px;
-        }
-      }
-      
-      .menu__sub {
-        display: none;
-        position: absolute;
-        top: 0%;
-        transform: translateY(-100%);
-        width: 250px;
-        left: 0;
-        background-color: #ffffff;
-        border-radius: 10px;
-        box-shadow: 0px -5px 10px -2px rgb(0 0 0 / 15%);
-        padding: 10px 0px;
-      }
-      &:hover {
-        .menu__sub {
-          display: block;
-        }
-      }
-      &.active-link {
-        .menu__item__link:after {
-          width: 30px;
-        }
-      }
     }
   }
 }
