--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -551,7 +551,7 @@ a:hover {
           position: absolute;
           transform: rotateX(-90deg);
           transition: transform 0.3s, opacity 0.3s;
-          min-width: 300px;
+          min-width: 250px;
           opacity: 0;
           box-shadow: 0px 5px 10px -5px rgb(0 0 0 / 15%);
           left: -20px;
@@ -565,7 +565,6 @@ a:hover {
           border-radius: 10px;
           .menu__sub__link {
             position: relative;
-            padding: 5px 20px;
             &::after {
               transition: 0.2s;
               position: absolute;
@@ -577,11 +576,14 @@ a:hover {
               transform: translate(-50%, 100%);
               left: 50%;
             }
-            &:hover {
+            &.active-link, &:hover {
               &:after {
                 width: 30px;
               }
             }
+          }
+          &.min-400 {
+            min-width: 400px;
           }
         }
         &:hover {
